# PyCriCodecs

./: .clang-format  .gitignore  .gitmodules  1.hca  README.md  main.py  pyproject.toml  run.py  test.py
CriCodecs/: CMakeLists.txt  CMakePresets.json  hca_decryptor.cpp
PyCriCodecs/: acb.py  awb.py  hca.py  hcadecrypt.pyi  utf.py
doc/: 1.c  debug.py  se011.acb  vo_adv_0000011.acb  vo_adv_0000011.awb  vo_adv_0000011_001.hca  vo_adv_1001011_000.hca
